--- a/careers.html
+++ b/careers.html
@@ -1,10 +1,31 @@
 <!doctype html>
 <html>
 <head>
-    <title>Careers At SkyTel </title>
+    <title>Log In</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <form>
+        <fieldset>
+            <legend>Contact Us</legend>
+            <label>Full Name</label><input type="text" id="fn"/>
+            <label>Email</label><input type="text" id="email"/>
+            <label>Comment</label><input type="textarea" id="comment"/>
+            <input type="button" value="Signup" id="reg"/>
+            <input type="button" value="Reset" id="reset"/>
+            <a href="login.html">Existing User? Log In</a>
+        </fieldset>
+    </form>
+    <div id="container">
+            <footer id="footer">
+                <ul id="navigation">
+                    <li><a href="media.html">MEDIA</a></li>
+                    <li><a href="careers.html">CAREERS</a></li>
+                    <li style="float: right"><a href="about-us.html">ABOUT SkyTel</a></li>
+                </ul>
+                <hr>
+                    <center><h4>&copy SkyTel<sup>&reg;</sup> 2018</h4></center>
+            </footer>
+        </div>
 </body>
 </html>
