--- a/bussiness.html
+++ b/bussiness.html
@@ -1,15 +1,15 @@
 <!doctype html>
 <html>
 <head>
-    <title>Contact Us </title>
-
+    <title>Bussiness </title>
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
         <div id="container">
                 <header id="header">
                 <nav id="user-options">
                     <ul id="navigation">
-                        <li><img src="../img/skytel-logo.jpg" alt="SkyTelLogo" height="42" width="42"/></li>
+                        <li><img src="H:/Verizon/SkyTel/img/skytel-logo.png" alt="SkyTelLogo" height="42" width="42"/></li>
                         <li style="float: right"><a href="index.html">Personal</a></li>
                         <li style="float: right"><a href="bussiness.html">Bussiness</a></li>
                     </ul>
@@ -28,7 +28,6 @@
                 </header>
             </div>
             <hr>
-
             <div id="container">
                     <footer id="footer">
                         <ul id="navigation">
@@ -37,9 +36,8 @@
                             <li style="float: right"><a href="about-us.html">ABOUT SkyTel</a></li>
                         </ul>
                         <hr>
-                        <div id="trailer"><h4>&copy SkyTel<sup>&reg;</sup> 2018</h4></div>
+                            <center><h4>&copy SkyTel<sup>&reg;</sup> 2018</h4></center>
                     </footer>
                 </div>
-    
 </body>
 </html>
